# multi_agent_for_impact_assesment

./: .gitignore  Makefile  README.md  README_JP.md  launch_dashboard.py  main.py  pyproject.toml  sample.env
docs/: spesification-backend.md  trulens_integration.md
docs/agent/: design_jp.md
docs/database/: design_en.md  design_jp.md
sample_script/: pydantic_chain_sample.py  run_multi_agent.py  run_multi_agent_sample.py  run_sample.py  setup.sh  trulens_demo.py  trulens_simple_demo.py
src/: main.py
src/agents/: __init__.py  base.py  persona_factory.py  registry.py  trulens_agent.py
src/agents/schemas/: __init__.py
src/agents/tools/: __init__.py  access_local_statistics.py  analyze_ad_content.py  base.py  calculate_aggregate_score.py  estimate_cultural_affinity.py  factory.py  fetch_previous_ads.py  generate_commentary.py  log_score_to_db.py  retrieve_neighbor_scores.py  validate_input_format.py
src/api/: router.py
src/api/v1/: __init__.py  ad.py  agent.py  graph.py  trulens.py
src/core/: __init__.py  app_settings.py  constants.py  db_settings.py  llm_settings.py
src/llm/chain/: pydantic_chain.py  pydantic_chain_with_trulens.py
src/llm/client/: azure_openai_client.py  gemini_client.py
src/llm/dependancy/: __init__.py  base.py  prompt.py
src/llm/monitoring/: __init__.py  feedback_functions.py  trulens_setup.py  trulens_wrapper.py
src/llm/prompts/: ad_content.py  ad_evaluation.py  aggregate_score.py  commentary.py  cultural_affinity.py
src/llm/schema/: __init__.py  ad_content_analysis.py  ad_evaluation.py  ad_history.py  (+3 more)
src/utils/: logger.py
(+15 files in other folders)
